compiler/tests/ar/errors/unused_import.salam
// لغة: العربية
// توقع: E082
استيراد رياضيات

دالة الرئیسیة:
    اطبع "hi"
نهاية
